--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/slTrust/gulu-180703/issues"
   },
-  "homepage": "https://github.com/slTrust/gulu-180703#readme"
+  "homepage": "https://github.com/slTrust/gulu-180703#readme",
+  "dependencies": {
+    "vue": "^2.5.16"
+  }
 }
