--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^2.1.0",
+    "chai": "^4.1.2",
     "less": "^3.0.4",
     "parcel-bundler": "^1.9.2",
     "vue-template-compiler": "^2.5.16"
