--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/slTrust/gulu-180703#readme",
   "dependencies": {
+    "chai-spies": "^1.0.0",
     "vue": "^2.5.16",
     "vue-hot-reload-api": "^2.3.0"
   },
